# assignment_aganitha

./: .gitignore  README.md  pyproject.toml
src/: cli.py  fetcher.py
