[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["anant-c <canant448@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"

[tool.poetry.scripts]
get-papers-list = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
